Bug 214833 - NTFS3: junctions are not properly resolved
Summary: NTFS3: junctions are not properly resolved
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: File System
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 high
Assignee: fs_other
URL: https://lkml.iu.edu/hypermail/linux/k...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-26 21:37 UTC by Artem S. Tashkinov
Modified: 2022-09-07 08:42 UTC (History)
3 users (show)

See Also:
Kernel Version: 5.15
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Artem S. Tashkinov 2021-10-26 21:37:59 UTC
The new NTFS3 driver does not properly resolve junctions.


Under ntfs-3g:

lrwxrwxrwx. 2 root root    15 Oct 21 07:59 'Documents and Settings' ->
/mnt/Windows10/Users

a proper working link.


Under ntfs3:

lrwxrwxrwx. 1 root root     8 Oct 21 07:59 'Documents and Settings' ->
C:/Users

this and other links, e.g. Users/All Users, Users/Default User, etc. are
all broken.


( This is a repost from https://www.spinics.net/lists/ntfs3/msg00630.html since no one has replied to it ).
Comment 1 Artem S. Tashkinov 2021-10-26 21:39:52 UTC
Konstantin Komarov is not in this bugzilla so I'm CC'ing Enrico Mioso and Kari Argillander
Comment 2 Kari Argillander 2021-10-26 22:49:15 UTC
I have noticed your message. We have lot of bug fixing going on right now so sorry for not replaying.

Thanks for reporting problems. Your problem is real and we need to decide howto handle it.

If you face any more problems be please to send them. Thanks for being early tester for ntfs3.
Comment 3 Artem S. Tashkinov 2021-10-26 22:53:49 UTC
(In reply to Kari Argillander from comment #2)
> I have noticed your message. We have lot of bug fixing going on right now so
> sorry for not replaying.
> 
> Thanks for reporting problems. Your problem is real and we need to decide
> howto handle it.
> 
> If you face any more problems be please to send them. Thanks for being early
> tester for ntfs3.

Thank you for a swift reply!

There's no rush really, I just wanted to be sure my message had been noticed. I may as well close this bug report if it's an annoyance.
Comment 4 Kari Argillander 2021-10-26 22:59:03 UTC
It is ok to be open for now. Maybe somebody else will also report bugs here. We really wan't them now. I'm also quite certain there will be many after 5.15 will be released. Hopefully no corruption bugs.
Comment 5 Artem S. Tashkinov 2022-09-07 08:42:36 UTC
The patch has been posted to LKML and NTFS3 mailing lists.

https://lkml.iu.edu/hypermail/linux/kernel/2209.0/07518.html

Note You need to log in before you can comment on or make changes to this bug.